--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,19 @@
   </head>
 
   <body>
-    <h1>Webpack starter kit</h1>
-    <input type="text">
+    <div class="container">
+      <h1>Countries application</h1>
+      <input
+        type="text"
+        name="query"
+        placeholder="Search coutries..."
+        autocomplete="off"
+        class="coutry-search js-country-search"
+      />
+
+      <ul class="coutries-list js-coutries-list"></ul>
+
+      <div class="coutry-content js-coutry-content"></div>
+    </div>
   </body>
 </html>
