added styles for application and chfnged some functions

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap"
+      rel="stylesheet"
+    />
     <title>Countries application</title>
   </head>
 
@@ -18,9 +22,9 @@
         class="coutry-search js-country-search"
       />
 
-      <ul class="coutries-list js-coutries-list"></ul>
+      <ul class="coutries-list js-countries-list"></ul>
 
-      <div class="coutry-content js-coutry-content"></div>
+      <div class="country-content js-country-content"></div>
     </div>
   </body>
 </html>
