changed README.md file

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <input
         type="text"
         name="query"
-        placeholder="Search coutries..."
+        placeholder="Search country..."
         autocomplete="off"
         class="coutry-search js-country-search"
       />
